@@ -34,7 +34,7 @@ apply plugin: 'io.spring.dependency-management'
 
 def versions = [
         junit              : '5.8.2',
-        lombok             : '1.18.12',
+        lombok             : '1.18.22',
         gradlePitest       : '1.3.0',
         pitest             : '1.7.4',
         reformLogging      : '5.1.7',
@@ -65,9 +65,14 @@ pmd {
 group = 'uk.gov.hmcts.reform.judicialbooking'
 version = '0.0.1'
 
-allprojects {
-    sourceCompatibility = '11'
-    targetCompatibility = '11'
+tasks.withType(JavaExec).configureEach {
+    javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 jacocoTestCoverageVerification {
@@ -140,18 +145,34 @@ tasks.withType(JavaCompile) {
     options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
 
-task functional(type: Test, description: 'Runs the functional tests.', group: 'Verification') {
-    testClassesDirs = sourceSets.functionalTest.output.classesDirs
-    classpath = sourceSets.functionalTest.runtimeClasspath
-    doFirst {
+task functional(type: JavaExec) {
+    description = "Runs the functional tests"
+    group = "Verification"
+
+    generateCucumberReports.enabled = false
+    main("uk.gov.hmcts.reform.judicialbooking.befta.JudicialBookingAmBeftaMain")
+    classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+    args = ['--strict',  '--tags', 'not @Ignore',
+            '--plugin', "json:${rootDir}/target/cucumber.json", '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
+            '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
+    ]
+    // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
+    jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+
+    finalizedBy {
         generateCucumberReports.enabled = true
-        javaexec {
-            main = "uk.gov.hmcts.reform.judicialbooking.befta.JudicialBookingAmBeftaMain"
-            classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
-            args = ['--plugin', "json:${projectDir}/target/cucumber.json", '--tags', 'not @Ignore', '--glue',
-                    'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features/']
+        generateCucumberReports {
+            doLast{
+                def functionalReportsFolder = "${rootDir}/target/cucumber/functional-html-reports/"
+                delete functionalReportsFolder
+                new File(functionalReportsFolder).mkdirs()
+                file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file(functionalReportsFolder))
+                logger.quiet("Functional test report moved to ---> file://$functionalReportsFolder/overview-features.html")
+            }
         }
     }
+
+    outputs.upToDateWhen { false }
 }
 
 task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
@@ -223,20 +244,19 @@ pact {
 jacocoTestReport {
     executionData(test)
     reports {
-        xml.enabled(true)
-        csv.enabled(false)
-        xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+        xml.required = true
+        csv.required = false
+        xml.outputLocation = file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
     }
 }
 
 project.tasks['sonarqube'].dependsOn jacocoTestReport
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.7"
 }
 
 pitest {
-    pitestVersion = "1.5.2"
     testPlugin = "junit5"
     targetClasses = ['uk.gov.hmcts.reform.*']
     excludedClasses = ['uk.gov.hmcts.reform.judicialbooking.JudicialBookingApplication',
@@ -396,7 +416,7 @@ dependencies {
     testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
     testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
 
-    testImplementation 'com.github.hmcts:befta-fw:8.7.5'
+    testImplementation 'com.github.hmcts:befta-fw:9.0.0-CCD-3068.1'
     testImplementation 'com.github.hmcts:fortify-client:1.2.0:all'
 
     smokeTestImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
@@ -422,7 +442,6 @@ dependencies {
     contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
-    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
     contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pact_version
     contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pact_version
     contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pact_version
